--- a/Test.html
+++ b/Test.html
@@ -6,7 +6,7 @@
     </head>
     <body>
        
-        <script src="Oops.js"></script>
+        <script src="Arrays.js"></script>
        
     </body>
 </html>
